Fixed static dir and added styles to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>New Dict</h1>
+    <h1>test</h1>
+    <div id="search-div">
+        <form id="search-form">
+            <input id="search-text" type="text">
+            <button id="search-button">Search</button>
+        </form>
+    </div>
 </body>
 </html>
