--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,15 @@
             </div>
         </div>
         <div id="main-container">
-
+            <script id="result" type="text/html">
+                <div id="result-container">
+                    <div class="japanese">JAPANESE</p></div>
+                    <div class="japanese-reading">JAPANESE-READING</div>
+                    <div class="definitions">DEFINITIONS</div>
+                    <div class="wordType">WORDTYPE</div>
+                    <div class="jlpt">JLPT</div>
+                </div>
+            </script>
         </div>
     </main>
 </body>
