Add form submit redirection

--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,14 @@
     <main>
         <div id="main-sidebar">
             <div id="search-div">
-                <form id="search-form">
-                    <input id="search-text" type="text" required>
+                <form id="search-form" action="/search">
+                    <input id="search-text" type="text" name="word" required>
                     <button id="search-button">Search</button>
                 </form>
             </div>
         </div>
         <div id="main-container">
-            <script id="result" type="text/html">
-                <div id="result-container">
-                    <div class="japanese">JAPANESE</p></div>
-                    <div class="japanese-reading">JAPANESE-READING</div>
-                    <div class="definitions">DEFINITIONS</div>
-                    <div class="wordType">WORDTYPE</div>
-                    <div class="jlpt">JLPT</div>
-                </div>
-            </script>
+            <!-- TODO: MAIN PAGE GREETING-->
         </div>
     </main>
 </body>
