--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="topbar">
-        <h1 onclick="location.href = '/'">Diccionario</h1>
+        <h1 onclick="location.href = '/'">Dictionary</h1>
         <a href="/about">About</a>
         <a href="/">Homepage</a>
     </div>
