--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <main>
         <div id="main-sidebar">
             <div id="search-div">
-                <form id="search-form" action="/search">
+                <form id="search-form" action="/search" autocomplete="off">
                     <input id="search-text" type="text" name="word" required>
                     <button id="search-button">Search</button>
                 </form>
