About and Main page

--- a/public/about.html
+++ b/public/about.html
@@ -22,7 +22,10 @@
             </div>
         </div>
         <div id="main-container">
-            <!-- TODO: ABOUT PAGE-->
+            <p id="about-text">Japanese to English or English to Japanese dictionary made by 
+                <a href="https://github.com/SoraSpades">SoraSpades</a> using the 
+                <a href="https://jisho.org/api/v1/search/words?keyword=">Jisho dictionary API.</a>
+            </p>
         </div>
     </main>
 </body>
