--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div id="main-container">
-            <!-- TODO: MAIN PAGE GREETING-->
+            <div id="boldfont" style="text-align: center;">JAPANESE - ENGLISH <br> ENGLISH - JAPANESE <br> DICTIONARY</div>
         </div>
     </main>
 </body>
