--- a/public/noresults.html
+++ b/public/noresults.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div id="main-container">
-            <div id="noresults">NO RESULTS FOUND</div> 
+            <div id="boldfont">NO RESULTS FOUND</div> 
         </div>
     </main>
 </body>
